--- a/Codigo/Codigo_java/.vscode/settings.json
+++ b/Codigo/Codigo_java/.vscode/settings.json
@@ -3,6 +3,7 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\thais\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar"
+        "c:\\Users\\thais\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
+        "c:\\Users\\202208386326\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar"
     ]
 }
