--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "c:\\Users\\Vitor\\Downloads\\mysql-connector-j-8.0.33.jar",
-        "c:\\Users\\202208386326\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar"
+        "c:\\Users\\202208386326\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
+        "c:\\Users\\Vitor\\Downloads\\gson-2.10.1.jar"
     ]
 }
