--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "lib/**/*.jar",
         "c:\\Users\\amanda.dias\\Downloads\\mysql-connector-j-8.0.33.jar",
         "c:\\Users\\thais\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
-        "c:\\Users\\202208386326\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar"
+        "c:\\Users\\202208386326\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
+        "c:\\Users\\thais\\Downloads\\gson-2.10.1.jar"
     ]
 }
